<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.view.GameCreationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/img_splash_screen"
        app:layout_constraintBottom_toBottomOf="parent" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:foregroundGravity="center"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutGameCreateName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etGameCreateName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/white"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textColor="@color/text_green" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutGameCreateDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etGameCreateDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/white"
                        android:hint="@string/created_at"
                        android:inputType="date"
                        android:textColor="@color/text_green" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutGameCreateDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etGameCreateDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:backgroundTint="@color/white"
                        android:ellipsize="end"
                        android:fontFamily="@font/roboto"
                        android:hint="@string/description"
                        android:inputType="text"
                        android:lineSpacingMultiplier="1.5"
                        android:lines="3"
                        android:textColor="@color/text_green" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSaveGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/red_main"
                    android:fontFamily="@font/roboto"
                    android:text="@string/save_game"
                    app:cornerRadius="3dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="100dp"
            android:backgroundTint="?attr/colorSecondary"
            android:layout_centerHorizontal="true"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="1dp"
                >
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/circle"/>

                    <ImageView
                        android:id="@+id/imgAddPhoto"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_baseline_photo_camera_24"/>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>